--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,17 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F3CDCD"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/pokemonImageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="136dp"
         android:contentDescription="pokemon is displayed here"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,8 +23,11 @@
         android:id="@+id/pokemonNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:fontFamily="serif-monospace"
         android:text="Name: "
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/pokemonImageView"
         app:layout_constraintTop_toBottomOf="@+id/pokemonImageView" />
 
@@ -30,8 +35,12 @@
         android:id="@+id/pokemonIdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:fontFamily="serif-monospace"
         android:text="ID: "
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/pokemonImageView"
         app:layout_constraintTop_toBottomOf="@+id/pokemonNameTextView" />
 
@@ -39,8 +48,12 @@
         android:id="@+id/pokemonTypeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
+        android:fontFamily="serif-monospace"
         android:text="Type: "
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/pokemonImageView"
         app:layout_constraintTop_toBottomOf="@+id/pokemonIdTextView" />
 
@@ -48,9 +61,29 @@
         android:id="@+id/fetchPokemonButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="60dp"
+        android:backgroundTint="#954343"
         android:text="Fetch Pokémon"
+        android:textColor="#F4F0F0"
+        android:textColorLink="#FF6363"
+        app:iconTint="#D84F4F"
         app:layout_constraintEnd_toEndOf="@+id/pokemonImageView"
-        app:layout_constraintTop_toBottomOf="@+id/pokemonTypeTextView"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/pokemonTypeTextView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="serif-monospace"
+        android:text="Tap PokeAPI"
+        android:textAlignment="textStart"
+        android:textColor="#0C0505"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/pokemonImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
